--- a/h2o-helm/Chart.yaml
+++ b/h2o-helm/Chart.yaml
@@ -4,12 +4,6 @@ description: H2O open source machine learning platform official Helm chart
 
 type: application
 
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 1.0.0
+version: 1.0.0 # Only a placeholder - actually replaced by real H2O version on-release.
 
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: latest
+appVersion: 1.0.0 # Only a placeholder - actually replaced by real H2O version on-release.
