Remove -prefix postfix

--- a/h2o-helm/templates/ingress.yaml
+++ b/h2o-helm/templates/ingress.yaml
@@ -35,7 +35,7 @@ spec:
           {{- range .paths }}
           - path: {{ . }}
             backend:
-              serviceName: {{ $fullName }}-service
+              serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
           {{- end }}
     {{- end }}
