--- a/h2o-helm/templates/service.yaml
+++ b/h2o-helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "h2o-helm.fullname" . }}-service
+  name: {{ include "h2o-helm.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "h2o-helm.labels" . | nindent 4 }}
