--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -23,7 +23,7 @@ artifacts {
     toPublish sourcesJar
 }
 
-if (project.ext.isRelease) {
+if (project.ext.isMakeJavadoc) {
     java {
         withJavadocJar()
     }
